# task_manager

./: .gitignore  README.md  app.py  main.py  models.py  pyproject.toml  requirements.txt
routers/: tasks.py  users.py
schemas/: models.py
