[project]
name = "task-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "streamlit>=1.28.0",
    "httpx>=0.25.0",
    "sqlalchemy>=2.0.46",
]

[dependency-groups]
dev = [
    "fastapi[standard,standars]>=0.128.0",
]
